# ffb

./: .gitignore  AGENTS.md  DESIGN.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release-app.yml
docs/: data-sources.md
snapshots/sleeper/: projections_nfl_2024_regular.json
src/ffb/: __init__.py  board.py  cli.py  config.py  consensus.py  identity.py  ingest.py  league.py  league_context.py  names.py  paths.py  rankings.py  scoring.py  season_data.py  snapshot.py  store.py  tiers.py  vorp.py
tests/: conftest.py  test_adp_ingest.py  test_adp_store.py  test_board.py  test_bye_store.py  test_cli.py  test_cli_cheatsheet.py  test_consensus.py  test_crosswalk_parse.py  test_crosswalk_store.py  test_espn_parse.py  test_ffc_parse.py  test_identity.py  test_ingest.py  test_layering.py  test_league.py  test_league_cli.py  test_league_context.py  test_league_scoring.py  test_names.py  test_rankings.py  test_release_workflow.py  test_schedule_ingest.py  test_schedule_parse.py  test_scoring.py  test_scoring_validation.py  test_season_cli.py  test_season_data.py  test_sleeper_parse.py  test_snapshot.py  test_store.py  test_tiers.py  test_vorp.py
tests/e2e/: prime_snapshots.py  run_backend_e2e.sh  test_prime_snapshots.py
tests/fixtures/: espn_projections_sample.json  ff_playerids_sample.json  ffc_adp_sample.json  schedule_sample.json  sleeper_projections_sample.json  yahoo_league_minimal.json
tracker/: .gitignore  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts  wrangler.jsonc
tracker/migrations/: 0001_init.sql  (+1 more)
(+43 files in other folders)
