[project]
name = "ffb"
version = "0.1.0"
description = "Fantasy football pipeline: projections -> DuckDB -> ranked CLI"
readme = "README.md"
authors = [{ name = "Brian Bell", email = "bellbm@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
ffb = "ffb.cli:app"

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
